tests/baselines/reference/jsxCallElaborationCheckNoCrash1.errors.txt
jsxCallElaborationCheckNoCrash1.tsx(10,29): error TS2322: Type '{}' is not assignable to type 'LibraryManagedAttributes<Tag, DetailedHTMLProps<HTMLAttributes<HTMLDivElement>, HTMLDivElement>>'.


==== jsxCallElaborationCheckNoCrash1.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import * as React from "react";
    
    type Tags = "span" | "div";
    
    export const Hoc = <Tag extends Tags>(
       TagElement: Tag,
    ): React.SFC => {
       const Component = () => <TagElement />;
                                ~~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'LibraryManagedAttributes<Tag, DetailedHTMLProps<HTMLAttributes<HTMLDivElement>, HTMLDivElement>>'.
       return Component;
    };
    